# vocabmaster

./: .dockerignore  .env  .gitignore  CLAUDE.md  DEV_INSTALL.md  Dockerfile  IMPROVEMENTS.md  LICENSE  MACOS_DEBUG_GUIDE.md  MACOS_INSTALL.md  README.md  README_en.md  SESSION_COMPLETE_REPORT.md  TestQt.spec  VocabMaster.entitlements  VocabMaster.spec  VocabMaster_fixed.spec  app.py  bec_higher_cufe.py  build_app.py  build_cross_platform.sh  config.yaml  config.yaml.template  config_test.yaml  gui.py  performance_report.py  preload_cache.py  pyproject.toml  qt.conf  requirements.txt  run.py  test_new_features.py  test_qt.py  test_qt_minimal.py
assets/: icon.icns
data/: adaptive_learning.db  ai_models_config.json  circadian_profiles.db  cognitive_dashboard.db  collaborative_learning.db  knowledge_graph.db  learning_behavior.db  learning_stats.db  vocabulary_3d.db
docs/: cross_platform_build_guide.md
hooks/: hook-PyQt6.py
terms_and_expressions/: terms_and_expressions_1.csv  terms_and_expressions_1.json  terms_and_expressions_2.csv  terms_and_expressions_2.json
utils/: __init__.py  adaptive_learning.py  ai_model_gui.py  ai_model_manager.py  api_config.py  api_config.py.template  base.py  bec.py  cache_manager.py  circadian_optimizer.py  cognitive_dashboard.py  collaborative_learning.py  config.py  config_gui.py  config_wizard.py  context_aware_learning.py  diy.py  embedding_provider.py  enhanced_cache.py  event_integration.py  event_system.py  flow_state_manager.py  ielts.py  ielts_embedding_cache.py  ielts_memory_enhanced.py  integration_test.py  knowledge_graph.py  (+16 more)
(+7 files in other folders)
