[project]
name = "vocabmaster"
version = "0.1.0"
description = "词汇测试系统，适用于 macOS 本地开发，使用 Poetry 管理依赖。"
authors = [
    {name = "Icarus603",email = "zhehongl91@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "pyqt6 (>=6.9.0,<7.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pyinstaller = "5.13.2"

